--- a/app/src/main/res/layout/row_event.xml
+++ b/app/src/main/res/layout/row_event.xml
@@ -28,19 +28,40 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <com.google.android.material.chip.ChipGroup
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:animateLayoutChanges="true"
-        android:theme="@style/Theme.MaterialComponents.Light">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/chpEventType"
+        <com.google.android.material.chip.ChipGroup
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:textColor="@android:color/primary_text_dark"
-            android:theme="@style/Theme.MaterialComponents.Light" />
+            android:animateLayoutChanges="true"
+            android:theme="@style/Theme.MaterialComponents.Light">
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chpEventType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:textColor="@android:color/primary_text_dark"
+                android:theme="@style/Theme.MaterialComponents.Light" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chpEventCourse"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:textColor="@android:color/primary_text_dark"
+                android:theme="@style/Theme.MaterialComponents.Light"
+                android:visibility="gone" />
+
+        </com.google.android.material.chip.ChipGroup>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chpEventDate"
@@ -51,14 +72,6 @@
             android:theme="@style/Theme.MaterialComponents.Light"
             app:chipBackgroundColor="@color/date" />
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/chpEventCourse"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:textColor="@android:color/primary_text_dark"
-            android:theme="@style/Theme.MaterialComponents.Light"
-            android:visibility="gone" />
-    </com.google.android.material.chip.ChipGroup>
+    </LinearLayout>
 
 </LinearLayout>
