--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -17,5 +17,16 @@
   -->
 
 <resources>
-    <attr name="iconColor" format="reference|color" />
+    <string-array name="sync_entry_values">
+        <item>-1</item>
+        <item>86400000</item>
+        <item>172800000</item>
+        <item>302400000</item>
+        <item>604800000</item>
+    </string-array>
+
+    <string-array name="theme_entry_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
 </resources>
